2006-04-26  Stefan Kost  <ensonic@users.sf.net>

	* ext/aalib/gstaasink.c:
	* ext/annodex/gstcmmldec.c:
	* ext/annodex/gstcmmlenc.c:
	* ext/cairo/gsttextoverlay.c:
	* ext/cairo/gsttimeoverlay.c:
	* ext/cdio/gstcdiocddasrc.c:
	* ext/dv/gstdvdec.c:
	* ext/dv/gstdvdemux.c:
	* ext/esd/esdmon.c:
	* ext/esd/esdsink.c:
	* ext/flac/gstflacenc.c:
	* ext/flac/gstflactag.c:
	* ext/gconf/gstgconfaudiosink.c: (gst_gconf_audio_sink_base_init):
	* ext/gconf/gstgconfaudiosrc.c: (gst_gconf_audio_src_base_init):
	* ext/gconf/gstgconfvideosink.c: (gst_gconf_video_sink_base_init):
	* ext/gconf/gstgconfvideosrc.c: (gst_gconf_video_src_base_init):
	* ext/gdk_pixbuf/pixbufscale.c:
	* ext/hal/gsthalaudiosink.c: (gst_hal_audio_sink_base_init):
	* ext/hal/gsthalaudiosrc.c: (gst_hal_audio_src_base_init):
	* ext/jpeg/gstjpegdec.c:
	* ext/jpeg/gstjpegenc.c:
	* ext/jpeg/gstsmokedec.c:
	* ext/jpeg/gstsmokeenc.c:
	* ext/libcaca/gstcacasink.c:
	* ext/libmng/gstmngdec.c:
	* ext/libmng/gstmngenc.c:
	* ext/libpng/gstpngdec.c:
	* ext/libpng/gstpngenc.c:
	* ext/mikmod/gstmikmod.c:
	* ext/raw1394/gstdv1394src.c:
	* ext/shout2/gstshout2.c: (gst_shout2send_init):
	* ext/shout2/gstshout2.h:
	* ext/speex/gstspeexdec.c:
	* ext/speex/gstspeexenc.c:
	* gst/alpha/gstalpha.c:
	* gst/alpha/gstalphacolor.c:
	* gst/apetag/gstapedemux.c:
	* gst/auparse/gstauparse.c:
	* gst/autodetect/gstautoaudiosink.c:
	(gst_auto_audio_sink_base_init):
	* gst/autodetect/gstautovideosink.c:
	(gst_auto_video_sink_base_init):
	* gst/avi/gstavidemux.c: (gst_avi_demux_base_init):
	* gst/avi/gstavimux.c: (gst_avimux_base_init):
	* gst/cutter/gstcutter.c:
	* gst/debug/breakmydata.c:
	* gst/debug/efence.c:
	* gst/debug/gstnavigationtest.c:
	* gst/debug/gstnavseek.c:
	* gst/debug/negotiation.c:
	* gst/debug/progressreport.c:
	* gst/debug/testplugin.c:
	* gst/effectv/gstaging.c:
	* gst/effectv/gstdice.c:
	* gst/effectv/gstedge.c:
	* gst/effectv/gstquark.c:
	* gst/effectv/gstrev.c:
	* gst/effectv/gstshagadelic.c:
	* gst/effectv/gstvertigo.c: